--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -3,7 +3,7 @@ nav{
   justify-content: space-around;
   align-items: center;
   a{
-    color: wheat;
+    color: #413e3e;
     &:hover{
       color: teal;
       transition: color 500ms;
